--- a/src/components/css/ProfileOverview.css
+++ b/src/components/css/ProfileOverview.css
@@ -32,7 +32,8 @@
 }
 
 .profile-info {
-  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .profile-info h1 {
@@ -40,9 +41,13 @@
   font-size: 20px;
 }
 
-.profile-info p {
-  margin: 5px 0 0;
+.profile-info-highlights {
+  display: flex;
+}
+
+.profile-info-highlights p {
   font-size: 14px;
+  margin-right: 10px;
 }
 
 /* Media Queries for Mobile */
