feat: link display name to OSM

--- a/src/components/css/ProfileOverview.css
+++ b/src/components/css/ProfileOverview.css
@@ -10,6 +10,11 @@
   box-sizing: border-box; /* Ensure padding is included in the width */
 }
 
+.profile-link {
+  text-decoration: none;
+  color: inherit;
+}
+
 .profile-header {
   display: flex;
   align-items: center;
