--- a/src/components/css/ProfileOverview.css
+++ b/src/components/css/ProfileOverview.css
@@ -43,7 +43,7 @@
 
 .profile-info h1 {
   margin: 0;
-  font-size: 20px;
+  font-size: 1.4em;
 }
 
 .profile-info-highlights {
@@ -51,7 +51,7 @@
 }
 
 .profile-info-highlights p {
-  font-size: 14px;
+  font-size: 0.8em;
   margin-right: 10px;
 }
 
@@ -72,13 +72,5 @@
     margin-right: 10px;
     width: 50px;
     height: 50px;
-  }
-
-  .profile-info h1 {
-    font-size: 16px;
-  }
-
-  .profile-info p {
-    font-size: 12px;
   }
 }
